# hslu-pren-simulator

./: .gitignore  Makefile  README.md  pyproject.toml
simulator/: __main__.py  graph_reader_yaml.py  gui.py  main.py  path_calculator.py  read_graph_yaml.py  robot.py
simulator/graph_configs/: base_graph.yml  obstacles.yml
tests/: test_main.py
