[tool.poetry]
name = "hslu-pren-simulator"
version = "0.1.0"
description = ""
authors = ["Alina Meyer <alina.eichmatt@gmail.com>, Lukas Schmid <dimschlukas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20240917"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.10.0"
coverage = "^7.6.4"
mypy = "^1.12.1"
flake8 = "^7.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simulator = 'simulator.__main__:main'
